<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/blanco_suave"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvPresupuesto_inicial_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/presupuesto_inicial"
        style="@style/texto_centrado"/>

    <TextView
        android:hint="presupuesto inicial"
        android:id="@+id/tvPresupuesto_inicial"
        style="@style/campo_entrada_presupuesto"
        tools:text="@string/valor_generico"/>

    <TextView
        android:id="@+id/tvPresupuesto_actual_texto"
        android:text="@string/presupuesto_actual"
        style="@style/texto_centrado"/>

    <TextView
        android:id="@+id/tvPresupuesto_actual"
        android:hint="presupuesto actual"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        style="@style/campo_entrada"
        tools:text="@string/valor_generico"/>

    <ImageView
        android:id="@+id/btn_historial"
        style="@style/base_datos"
        android:onClick="irHistorial"
        android:contentDescription="@string/acceso_a_historial_de_gastos"
        app:srcCompat="@drawable/dise_o_sin_t_tulo"/>

    <Button
        android:id="@+id/btn_introducir_gasto"
        style="@style/texto_centrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/tercero"
        android:gravity="center"
        android:onClick="irIntroducir"
        android:text="@string/introducir"
        android:textColor="@color/blanco" />
</LinearLayout>